# CloseAuctionPredict

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
configs/: tuning_config.yaml
example_scripts/: assemble_dataset.py  feature_engineer.py  generate_data.py  train_evaluate.py
example_scripts/preprocessing/: process_auction.py  process_limit_order_book.py  process_trades.py
models/: BaseModel.py
models/ConvolutionalModels/: BaseConvolve.py  TradeConvolve.py
models/ReccurentModels/: BaseLSTM.py  TradeLSTM.py
models/TradeModels/: TradeConvolve.py  TradeSequential.py
models/TransformerModels/: BaseTransformer.py
notebooks/: explorative_analysis.ipynb  linear_regression.ipynb  model_exploration.ipynb
scripts/: aggregation.py  benchmark.py  grouping.py  merging.py  split.py  structure.py
scripts/DataProcessing/: aggregate_trades.py  assemble_dataset.py  merge_trades.py  preprocess_trades.py  process_trades.py  split_trades.py  to_tensor.py
scripts/Evaluating/: cnn.py  lstm.py  transformer.py
scripts/Optimizing/: cnn.py
scripts/hyperoptimize/: cnn.py  transformer.py
scripts/hyperparameter_tuning/: tune_cnn.py  tune_linear.py  tune_lstm.py  tune_transformer.py
scripts/intraday/: assemble_intraday.py  engineer_intraday.py  train_evaluate.py
scripts/preprocessing/: process_limit_order_book.py
src/: AggregationMerger.py  AggregationMerging.py  TradeAggregation.py  TradeAggregator.py
src/DataProcessing/: DatasetAssembler.py  FileMerger.py  TradeAggregator.py  TradeMerger.py  TradePreprocessor.py  (+1 more)
tests/: test_base_models.py
(+117 files in other folders)
