[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "CloseAuctionPredict"
version = "1.0.0"
description = "Predicting closing price movements of stocks using machine learning."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "torch",
  "optuna",
  "PyYAML",
  "tqdm"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
